# mlx-rb

./: .gitignore  .gitmodules  .rubocop.yml  CHANGELOG.md  Gemfile  README.md  Rakefile  mlx-rb.gemspec  phase-0-setup.md  phase-1-summary.md  phase-2-summary.md  phase-3-summary.md  phase-4-summary.md
.github/workflows/: main.yml  release.yml
bench/: README.md  attention.rb  llama_generate.rb  load_llama2_7b.rb  matmul.rb  quantize_memory.rb
docs/: announce.md  architecture.md  roadmap.md
docs/adr/: 0001-eager-vs-lazy.md  0002-module-system.md  0003-binding-strategy.md
examples/: llama_inference.rb  lora_finetune.rb  quantized_llama.rb  quantized_llama_7b.rb  tiny_transformer.rb  train_mlp.rb
exe/: mlx-rb
ext/mlx_bridge/: Cargo.toml  build.rs  exports.txt  extconf.rb
ext/mlx_bridge/src/: lib.rs
lib/: mlx.rb
lib/mlx/: array.rb  attach_lora.rb  dtype.rb  ffi.rb  io.rb  models.rb  nn.rb  optimizers.rb  quantize_model.rb  quantized.rb  transforms.rb  version.rb
lib/mlx/io/: adapter.rb  hub.rb  huggingface.rb  safetensors.rb
lib/mlx/models/: llama.rb  mistral.rb  qwen2.rb
lib/mlx/nn/: dropout.rb  embedding.rb  functional.rb  layer_norm.rb  linear.rb  lora.rb  module.rb  multi_head_attention.rb  quantized_linear.rb  rms_norm.rb
lib/mlx/optimizers/: adamw.rb  base.rb  lr_scheduler.rb  sgd.rb
sig/mlx/: rb.rbs
spec/: spec_helper.rb
spec/mlx/: array_spec.rb  quantize_model_spec.rb  quantized_spec.rb  transforms_spec.rb
spec/mlx/io/: hub_spec.rb  huggingface_spec.rb  safetensors_spec.rb
spec/mlx/nn/: linear_spec.rb  (+8 more)
spec/support/: python_oracle.rb
(+5 files in other folders)
